# Home_budget

./: .gitignore  .instructions.md  Agent.md  CLAUDE.md  README.md  README_en.md  README_pl.md  start.sh
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 20251125214844_init.down.sql  20251125214844_init.sql  20251127104000_sqlx_seed_polish.down.sql  20251127104000_sqlx_seed_polish.sql  20251127121000_add_account_number.sql  20251128150001_seed_initial_data.down.sql  20251128150001_seed_initial_data.sql  20251129205300_add_user_names.down.sql  20251129205300_add_user_names.sql  20251129210000_create_goals.down.sql  20251129210000_create_goals.sql  20251129215000_add_account_is_closed.down.sql  20251129215000_add_account_is_closed.sql  20251130150000_create_hashtags.down.sql  20251130150000_create_hashtags.up.sql  20251130160000_add_recurring_operations.down.sql  20251130160000_add_recurring_operations.up.sql  20251204220000_create_assets_system.down.sql  20251204220000_create_assets_system.sql  20251204230000_make_email_optional.down.sql  20251204230000_make_email_optional.sql  20251205150000_fix_budgets_asset_id.down.sql  20251205150000_fix_budgets_asset_id.sql  20251212000000_add_split_operations.down.sql  20251212000000_add_split_operations.sql  20251213120000_add_account_balance_trigger.down.sql  20251213120000_add_account_balance_trigger.sql  20251214222937_create_import_templates.down.sql  20251214222937_create_import_templates.sql  20251218120000_add_category_sort_order.down.sql  20251218120000_add_category_sort_order.sql  (+14 more)
backend/src/: main.rs  (+5 more)
(+156 files in other folders)
